[package]
name = "rustigo"
version = "0.1.0"
authors = ["Chirag Singla <chirag.singla.pi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Dependencies needed at runtime
# * logos -        The code is tokenized using the logos crate. It is
#                  way faster and readable than anything by hand.
[dependencies]
logos = "0.12.1"

[profile.release]
strip = true    # strip symbols from the binary
lto = true      # enable link time optimisation
